# oko

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  display.c  display.h  log.c  log.h  main.c  oko.c  oko.h  utils.c  utils.h
.github/workflows/: ci.yml
oko-client/: main.c  oko.c  oko.h
oko-client.xcodeproj/: project.pbxproj
oko-client.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
oko-client.xcodeproj/xcuserdata/eric.xcuserdatad/xcschemes/: xcschememanagement.plist
oko-client/macos/: oko.c
src/: display.c  display.h  display.rs  log.c  log.h  log.rs  main.c  main.rs  oko.c  oko.h  oko.rs  theme.toml  utils.c
test/: minunit.h  oko_test.c  tests.c  testutils.c  testutils.h
tests/: Makefile  oko_tests
