[package]
name = "oko-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
cursive = { version = "0.20.0", features = ["toml"] }
sysinfo = "0.26.6"
