[package]
name = "oko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["cargo"] }
crossterm = "*"
log = "*"
sysinfo = "*"
systemstat = "*"
tracing-subscriber = { version = "*", features = ["json"] }
tui = "*"
